# kiprio-redact

./: LICENSE  README.md  pyproject.toml
kiprio_redact/: __init__.py  cli.py
tests/: test_redact.py
